--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="style.css" />
         <title>Calculator</title>
     </head>
+
     <body>
         <div class="grid-container">
             <div class="top__flex">
@@ -23,9 +24,11 @@
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
+
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
+
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
@@ -38,11 +41,12 @@
                 <button class="button--modifier">OFF</button>
                 <button class="button--modifier">X</button>
                 <button class="button--modifier" id="division">&#247;</button>
-            </div>
-            <div class="fourth__flex">
-                <button class="button--lg">+</button>
-                <button class="button--lg">-</button>
+                <button class="button--modifier">+</button>
+                <button class="button--modifier">-</button>
+                <button class="button--lg">AC</button>
             </div>
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
