Changed color, added backgorund color, make all buttons functional

--- a/index.html
+++ b/index.html
@@ -24,25 +24,39 @@
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
-
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
                 <button>0</button>
                 <button>.</button>
-                <button>=</button>
+                <button id="equals">=</button>
             </div>
             <div class="third__flex">
-                <button class="button--modifier">ON</button>
-                <button class="button--modifier">OFF</button>
-                <button class="button--modifier">X</button>
+                <button class="button--modifier orangeBtn" id="turnonBtn">
+                    ON
+                </button>
+                <button class="button--modifier orangeBtn" id="turnoffBtn">
+                    OFF
+                </button>
+                <button class="button--modifier" id="multiply">X</button>
                 <button class="button--modifier" id="division">&#247;</button>
-                <button class="button--modifier">+</button>
-                <button class="button--modifier">-</button>
+                <button
+                    class="button--modifier"
+                    id="addition"
+                    value="Increment Value"
+                >
+                    +
+                </button>
+                <button
+                    class="button--modifier"
+                    id="subtraction"
+                    value="Decrement Value"
+                >
+                    -
+                </button>
                 <button class="button--lg">AC</button>
             </div>
         </div>
