--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>2</button>
                 <button>3</button>
                 <button>0</button>
-                <button>.</button>
+                <button id="decimalBtn">.</button>
                 <button id="equals">=</button>
             </div>
             <div class="third__flex">
@@ -61,6 +61,6 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
